<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="pl.homik.combine.chooseMenu.ChooseMenuActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nameProjectCalculator"
        android:id="@+id/buttonCalculator"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nameProjectAnimation"
        android:id="@+id/buttonAnimation"
        android:layout_below="@+id/buttonCalculator"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nameProjectHappyFace"
        android:id="@+id/buttonHappyFace"
        android:layout_below="@+id/buttonAnimation"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/editTextMagicNumber"
        android:hint="@string/magicNumberHint"
        android:layout_below="@+id/buttonHappyFace"
        android:layout_alignParentStart="true"
        android:visibility="invisible"
        android:layout_alignEnd="@+id/buttonHappyFace" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submitName"
        android:id="@+id/buttonSubmit"
        android:visibility="invisible"
        android:layout_alignBottom="@+id/editTextMagicNumber"
        android:layout_centerHorizontal="true" />
    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:max="@integer/progresBarMax"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"
        />

</RelativeLayout>
